Mon Jan  9 20:10:55 UTC 2023
a/aaa_libraries-15.1-x86_64-16.txz:  Rebuilt.
  Upgraded:  libncurses.so.6.4, libncursesw.so.6.4, libtinfo.so.6.4,
  libform.so.6.4, libformw.so.6.4, libmenu.so.6.4, libmenuw.so.6.4,
  libpanel.so.6.4, libglib-2.0.so.0.7400.4, libgmodule-2.0.so.0.7400.4,
  libgobject-2.0.so.0.7400.4, libgthread-2.0.so.0.7400.4, libmpfr.so.6.2.0.
a/aaa_terminfo-6.4-x86_64-1.txz:  Upgraded.
ap/man-db-2.11.2-x86_64-1.txz:  Upgraded.
kde/kio-5.101.0-x86_64-2.txz:  Rebuilt.
  [PATCH] Restore old behavior for KFileFilterCombo::setFilter
  Thanks to marav.
kde/okteta-0.26.10-x86_64-1.txz:  Upgraded.
l/libspectre-0.2.12-x86_64-1.txz:  Upgraded.
l/mpfr-4.2.0-x86_64-1.txz:  Upgraded.
l/ncurses-6.4-x86_64-1.txz:  Upgraded.
x/xterm-378-x86_64-1.txz:  Upgraded.
xap/libnma-1.10.6-x86_64-1.txz:  Upgraded.
+--------------------------+
Sat Jan  7 20:30:44 UTC 2023
We're going to go ahead and jump to the 6.1.4 kernel, in spite of the fact
that a kernel bisect identified the patch that was preventing 32-bit from
booting here on a Thinkpad X1E:

------
From 2e479b3b82c49bfb9422274c0a9c155a41caecb7 Mon Sep 17 00:00:00 2001
From: Michael Kelley <mikelley@microsoft.com>
Date: Wed, 16 Nov 2022 10:41:24 -0800
Subject: [PATCH] x86/ioremap: Fix page aligned size calculation in
 __ioremap_caller()

commit 4dbd6a3e90e03130973688fd79e19425f720d999 upstream.

Current code re-calculates the size after aligning the starting and
ending physical addresses on a page boundary. But the re-calculation
also embeds the masking of high order bits that exceed the size of
the physical address space (via PHYSICAL_PAGE_MASK). If the masking
removes any high order bits, the size calculation results in a huge
value that is likely to immediately fail.

Fix this by re-calculating the page-aligned size first. Then mask any
high order bits using PHYSICAL_PAGE_MASK.

Fixes: ffa71f33a820 ("x86, ioremap: Fix incorrect physical address handling in
PAE mode")
------
