@@ -11,9 +11,27 @@
       <description>Tracking Slackware development in git.</description>
       <language>en-us</language>
       <id xmlns="http://www.w3.org/2005/Atom">urn:uuid:c964f45e-6732-11e8-bbe5-107b4450212f</id>
-      <pubDate>Mon,  9 Jan 2023 20:10:55 GMT</pubDate>
-      <lastBuildDate>Mon,  9 Jan 2023 20:34:44 GMT</lastBuildDate>
+      <pubDate>Tue, 10 Jan 2023 21:32:00 GMT</pubDate>
+      <lastBuildDate>Tue, 10 Jan 2023 22:35:11 GMT</lastBuildDate>
       <generator>maintain_current_git.sh v 1.17</generator>
+      <item>
+         <title>Tue, 10 Jan 2023 21:32:00 GMT</title>
+         <pubDate>Tue, 10 Jan 2023 21:32:00 GMT</pubDate>
+         <link>https://git.slackware.nl/current/tag/?h=20230110213200</link>
+         <guid isPermaLink="false">20230110213200</guid>
+         <description>
+           <![CDATA[<pre>
+a/kernel-firmware-20230110_a1ad1d5-noarch-1.txz:  Upgraded.
+n/ca-certificates-20221205-noarch-2.txz:  Rebuilt.
+  Make sure that if we're installing this package on another partition (such as
+  when using installpkg with a --root parameter) that the updates are done on
+  that partition. Thanks to fulalas.
+x/libva-utils-2.17.1-x86_64-1.txz:  Upgraded.
+xfce/libxfce4util-4.18.1-x86_64-1.txz:  Upgraded.
+xfce/thunar-4.18.2-x86_64-1.txz:  Upgraded.
+           </pre>]]>
+         </description>
+      </item>
       <item>
          <title>Mon,  9 Jan 2023 20:10:55 GMT</title>
          <pubDate>Mon,  9 Jan 2023 20:10:55 GMT</pubDate>
