@@ -1,20 +1,20 @@
-Mon Jan  9 20:14:09 UTC 2023
+Tue Jan 10 21:39:12 UTC 2023
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2023-01-09 20:10 .
+drwxr-xr-x 12 root root      4096 2023-01-10 21:32 .
 -rw-r--r--  1 root root      5767 2022-02-02 22:44 ./ANNOUNCE.15.0
 -rw-r--r--  1 root root     16617 2022-02-02 23:27 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root   1107308 2023-01-08 18:07 ./CHECKSUMS.md5
--rw-r--r--  1 root root       163 2023-01-08 18:07 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root   1107357 2023-01-09 20:14 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2023-01-09 20:14 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root    460653 2023-01-09 20:10 ./ChangeLog.txt
+-rw-r--r--  1 root root    461157 2023-01-10 21:32 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
 drwxr-xr-x  2 root root      4096 2023-01-08 18:06 ./EFI/BOOT
 -rw-r--r--  1 root root   1187840 2021-06-15 19:16 ./EFI/BOOT/bootx64.efi
@@ -25,9 +25,9 @@ drwxr-xr-x  2 root root      4096 2023-01-08 18:06 ./EFI/BOOT
 -rwxr-xr-x  1 root root      2504 2019-07-05 18:54 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1441847 2023-01-08 18:07 ./FILELIST.TXT
+-rw-r--r--  1 root root   1441992 2023-01-09 20:14 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
--rw-r--r--  1 root root    861655 2023-01-09 20:13 ./PACKAGES.TXT
+-rw-r--r--  1 root root    861656 2023-01-10 21:38 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8034 2022-02-02 03:36 ./README.TXT
 -rw-r--r--  1 root root      3623 2023-01-07 20:00 ./README.initrd
 -rw-r--r--  1 root root     34162 2022-01-30 20:35 ./README_CRYPT.TXT
@@ -746,13 +746,13 @@ drwxr-xr-x  2 root root      4096 2022-02-03 07:02 ./patches
 -rw-r--r--  1 root root       575 2022-02-03 07:02 ./patches/FILE_LIST
 -rw-r--r--  1 root root        14 2022-02-03 07:02 ./patches/MANIFEST.bz2
 -rw-r--r--  1 root root       224 2022-02-03 07:02 ./patches/PACKAGES.TXT
-drwxr-xr-x 17 root root      4096 2023-01-09 20:13 ./slackware64
--rw-r--r--  1 root root    336262 2023-01-09 20:13 ./slackware64/CHECKSUMS.md5
--rw-r--r--  1 root root       163 2023-01-09 20:13 ./slackware64/CHECKSUMS.md5.asc
--rw-r--r--  1 root root    417039 2023-01-09 20:13 ./slackware64/FILE_LIST
--rw-r--r--  1 root root   4326820 2023-01-09 20:13 ./slackware64/MANIFEST.bz2
+drwxr-xr-x 17 root root      4096 2023-01-10 21:38 ./slackware64
+-rw-r--r--  1 root root    336262 2023-01-10 21:38 ./slackware64/CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2023-01-10 21:38 ./slackware64/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    417039 2023-01-10 21:38 ./slackware64/FILE_LIST
+-rw-r--r--  1 root root   4321159 2023-01-10 21:38 ./slackware64/MANIFEST.bz2
 lrwxrwxrwx  1 root root        15 2009-08-23 23:34 ./slackware64/PACKAGES.TXT -> ../PACKAGES.TXT
-drwxr-xr-x  2 root root     32768 2023-01-09 20:12 ./slackware64/a
+drwxr-xr-x  2 root root     32768 2023-01-10 21:37 ./slackware64/a
 -rw-r--r--  1 root root       327 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txt
 -rw-r--r--  1 root root     10720 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz
 -rw-r--r--  1 root root       163 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz.asc
@@ -917,9 +917,9 @@ drwxr-xr-x  2 root root     32768 2023-01-09 20:12 ./slackware64/a
 -rw-r--r--  1 root root       461 2021-02-13 11:08 ./slackware64/a/kbd-1.15.3-x86_64-6.txt
 -rw-r--r--  1 root root   1137072 2021-02-13 11:08 ./slackware64/a/kbd-1.15.3-x86_64-6.txz
 -rw-r--r--  1 root root       163 2021-02-13 11:08 ./slackware64/a/kbd-1.15.3-x86_64-6.txz.asc
--rw-r--r--  1 root root       422 2023-01-05 02:39 ./slackware64/a/kernel-firmware-20230104_4ee2014-noarch-1.txt
--rw-r--r--  1 root root 267686340 2023-01-05 02:39 ./slackware64/a/kernel-firmware-20230104_4ee2014-noarch-1.txz
--rw-r--r--  1 root root       163 2023-01-05 02:39 ./slackware64/a/kernel-firmware-20230104_4ee2014-noarch-1.txz.asc
+-rw-r--r--  1 root root       422 2023-01-10 21:17 ./slackware64/a/kernel-firmware-20230110_a1ad1d5-noarch-1.txt
+-rw-r--r--  1 root root 269020920 2023-01-10 21:17 ./slackware64/a/kernel-firmware-20230110_a1ad1d5-noarch-1.txz
+-rw-r--r--  1 root root       163 2023-01-10 21:17 ./slackware64/a/kernel-firmware-20230110_a1ad1d5-noarch-1.txz.asc
 -rw-r--r--  1 root root       624 2023-01-07 19:32 ./slackware64/a/kernel-generic-6.1.4-x86_64-1.txt
 -rw-r--r--  1 root root   8716040 2023-01-07 19:32 ./slackware64/a/kernel-generic-6.1.4-x86_64-1.txz
 -rw-r--r--  1 root root       163 2023-01-07 19:32 ./slackware64/a/kernel-generic-6.1.4-x86_64-1.txz.asc
@@ -3947,7 +3947,7 @@ drwxr-xr-x 2 root root    86016 2023-01-09 20:12 ./slackware64/l
 -rw-r--r-- 1 root root      463 2022-01-21 04:11 ./slackware64/l/zstd-1.5.2-x86_64-1.txt
 -rw-r--r-- 1 root root   437228 2022-01-21 04:11 ./slackware64/l/zstd-1.5.2-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-01-21 04:11 ./slackware64/l/zstd-1.5.2-x86_64-1.txz.asc
-drwxr-xr-x 2 root root    36864 2023-01-07 20:33 ./slackware64/n
+drwxr-xr-x 2 root root    36864 2023-01-10 21:38 ./slackware64/n
 -rw-r--r-- 1 root root      357 2022-09-10 18:15 ./slackware64/n/ModemManager-1.18.12-x86_64-1.txt
 -rw-r--r-- 1 root root  2148884 2022-09-10 18:15 ./slackware64/n/ModemManager-1.18.12-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-09-10 18:15 ./slackware64/n/ModemManager-1.18.12-x86_64-1.txz.asc
@@ -3984,9 +3984,9 @@ drwxr-xr-x 2 root root    36864 2023-01-07 20:33 ./slackware64/n
 -rw-r--r-- 1 root root      484 2021-10-27 17:48 ./slackware64/n/c-ares-1.18.1-x86_64-1.txt
 -rw-r--r-- 1 root root   139696 2021-10-27 17:48 ./slackware64/n/c-ares-1.18.1-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2021-10-27 17:48 ./slackware64/n/c-ares-1.18.1-x86_64-1.txz.asc
--rw-r--r-- 1 root root      367 2022-12-05 20:53 ./slackware64/n/ca-certificates-20221205-noarch-1.txt
--rw-r--r-- 1 root root   133972 2022-12-05 20:53 ./slackware64/n/ca-certificates-20221205-noarch-1.txz
--rw-r--r-- 1 root root      163 2022-12-05 20:53 ./slackware64/n/ca-certificates-20221205-noarch-1.txz.asc
+-rw-r--r-- 1 root root      367 2023-01-10 21:19 ./slackware64/n/ca-certificates-20221205-noarch-2.txt
+-rw-r--r-- 1 root root   134124 2023-01-10 21:19 ./slackware64/n/ca-certificates-20221205-noarch-2.txz
+-rw-r--r-- 1 root root      163 2023-01-10 21:19 ./slackware64/n/ca-certificates-20221205-noarch-2.txz.asc
 -rw-r--r-- 1 root root      603 2022-08-12 16:33 ./slackware64/n/cifs-utils-7.0-x86_64-1.txt
 -rw-r--r-- 1 root root   222008 2022-08-12 16:33 ./slackware64/n/cifs-utils-7.0-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-08-12 16:33 ./slackware64/n/cifs-utils-7.0-x86_64-1.txz.asc
@@ -4454,7 +4454,7 @@ drwxr-xr-x 2 root root     4096 2022-11-23 19:54 ./slackware64/tcl
 -rw-r--r-- 1 root root      227 2022-11-23 19:07 ./slackware64/tcl/tk-8.6.13-x86_64-1.txt
 -rw-r--r-- 1 root root  1802760 2022-11-23 19:07 ./slackware64/tcl/tk-8.6.13-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-11-23 19:07 ./slackware64/tcl/tk-8.6.13-x86_64-1.txz.asc
-drwxr-xr-x 2 root root    65536 2023-01-09 20:12 ./slackware64/x
+drwxr-xr-x 2 root root    65536 2023-01-10 21:37 ./slackware64/x
 -rw-r--r-- 1 root root      440 2022-12-09 18:23 ./slackware64/x/OpenCC-1.1.6-x86_64-1.txt
 -rw-r--r-- 1 root root   677084 2022-12-09 18:23 ./slackware64/x/OpenCC-1.1.6-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-12-09 18:23 ./slackware64/x/OpenCC-1.1.6-x86_64-1.txz.asc
@@ -4871,9 +4871,9 @@ drwxr-xr-x 2 root root    65536 2023-01-09 20:12 ./slackware64/x
 -rw-r--r-- 1 root root      423 2022-12-31 21:25 ./slackware64/x/libva-2.17.0-x86_64-1.txt
 -rw-r--r-- 1 root root   180256 2022-12-31 21:25 ./slackware64/x/libva-2.17.0-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-12-31 21:25 ./slackware64/x/libva-2.17.0-x86_64-1.txz.asc
--rw-r--r-- 1 root root      294 2022-12-31 21:26 ./slackware64/x/libva-utils-2.17.0-x86_64-1.txt
--rw-r--r-- 1 root root   487952 2022-12-31 21:26 ./slackware64/x/libva-utils-2.17.0-x86_64-1.txz
--rw-r--r-- 1 root root      163 2022-12-31 21:26 ./slackware64/x/libva-utils-2.17.0-x86_64-1.txz.asc
+-rw-r--r-- 1 root root      294 2023-01-10 21:10 ./slackware64/x/libva-utils-2.17.1-x86_64-1.txt
+-rw-r--r-- 1 root root   488104 2023-01-10 21:10 ./slackware64/x/libva-utils-2.17.1-x86_64-1.txz
+-rw-r--r-- 1 root root      163 2023-01-10 21:10 ./slackware64/x/libva-utils-2.17.1-x86_64-1.txz.asc
 -rw-r--r-- 1 root root      500 2022-03-07 20:26 ./slackware64/x/libvdpau-1.5-x86_64-1.txt
 -rw-r--r-- 1 root root    59680 2022-03-07 20:26 ./slackware64/x/libvdpau-1.5-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-03-07 20:26 ./slackware64/x/libvdpau-1.5-x86_64-1.txz.asc
@@ -5486,7 +5486,7 @@ drwxr-xr-x 2 root root    16384 2023-01-09 20:12 ./slackware64/xap
 -rw-r--r-- 1 root root      230 2022-12-04 19:55 ./slackware64/xap/xsnow-3.6.0-x86_64-1.txt
 -rw-r--r-- 1 root root   753752 2022-12-04 19:55 ./slackware64/xap/xsnow-3.6.0-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-12-04 19:55 ./slackware64/xap/xsnow-3.6.0-x86_64-1.txz.asc
-drwxr-xr-x 2 root root    12288 2023-01-06 00:58 ./slackware64/xfce
+drwxr-xr-x 2 root root    12288 2023-01-10 21:37 ./slackware64/xfce
 -rw-r--r-- 1 root root      253 2021-10-01 03:27 ./slackware64/xfce/Greybird-3.22.15-noarch-1.txt
 -rw-r--r-- 1 root root   189900 2021-10-01 03:27 ./slackware64/xfce/Greybird-3.22.15-noarch-1.txz
 -rw-r--r-- 1 root root      163 2021-10-01 03:27 ./slackware64/xfce/Greybird-3.22.15-noarch-1.txz.asc
@@ -5504,18 +5504,18 @@ drwxr-xr-x 2 root root    12288 2023-01-06 00:58 ./slackware64/xfce
 -rw-r--r-- 1 root root      309 2023-01-05 20:00 ./slackware64/xfce/libxfce4ui-4.18.1-x86_64-1.txt
 -rw-r--r-- 1 root root   354932 2023-01-05 20:00 ./slackware64/xfce/libxfce4ui-4.18.1-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2023-01-05 20:00 ./slackware64/xfce/libxfce4ui-4.18.1-x86_64-1.txz.asc
--rw-r--r-- 1 root root      316 2022-12-17 20:30 ./slackware64/xfce/libxfce4util-4.18.0-x86_64-1.txt
--rw-r--r-- 1 root root   139080 2022-12-17 20:30 ./slackware64/xfce/libxfce4util-4.18.0-x86_64-1.txz
--rw-r--r-- 1 root root      163 2022-12-17 20:30 ./slackware64/xfce/libxfce4util-4.18.0-x86_64-1.txz.asc
+-rw-r--r-- 1 root root      316 2023-01-10 21:06 ./slackware64/xfce/libxfce4util-4.18.1-x86_64-1.txt
+-rw-r--r-- 1 root root   138332 2023-01-10 21:06 ./slackware64/xfce/libxfce4util-4.18.1-x86_64-1.txz
+-rw-r--r-- 1 root root      163 2023-01-10 21:06 ./slackware64/xfce/libxfce4util-4.18.1-x86_64-1.txz.asc
 -rw-r--r-- 1 root root     3369 2020-12-07 21:31 ./slackware64/xfce/maketag
 -rw-r--r-- 1 root root     3369 2020-12-07 21:31 ./slackware64/xfce/maketag.ez
 -rw-r--r-- 1 root root      423 2022-07-10 18:32 ./slackware64/xfce/mousepad-0.5.10-x86_64-1.txt
 -rw-r--r-- 1 root root   398004 2022-07-10 18:32 ./slackware64/xfce/mousepad-0.5.10-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2022-07-10 18:32 ./slackware64/xfce/mousepad-0.5.10-x86_64-1.txz.asc
 -rw-r--r--   1 root root       555 2020-12-07 21:31 ./slackware64/xfce/tagfile
--rw-r--r--   1 root root       460 2022-12-22 18:51 ./slackware64/xfce/thunar-4.18.1-x86_64-1.txt
--rw-r--r--   1 root root   1428480 2022-12-22 18:51 ./slackware64/xfce/thunar-4.18.1-x86_64-1.txz
--rw-r--r--   1 root root       163 2022-12-22 18:51 ./slackware64/xfce/thunar-4.18.1-x86_64-1.txz.asc
+-rw-r--r--   1 root root       460 2023-01-10 21:07 ./slackware64/xfce/thunar-4.18.2-x86_64-1.txt
+-rw-r--r--   1 root root   1439860 2023-01-10 21:07 ./slackware64/xfce/thunar-4.18.2-x86_64-1.txz
+-rw-r--r--   1 root root       163 2023-01-10 21:07 ./slackware64/xfce/thunar-4.18.2-x86_64-1.txz.asc
 -rw-r--r--   1 root root       336 2022-12-17 20:41 ./slackware64/xfce/thunar-volman-4.18.0-x86_64-1.txt
 -rw-r--r--   1 root root    132100 2022-12-17 20:41 ./slackware64/xfce/thunar-volman-4.18.0-x86_64-1.txz
 -rw-r--r--   1 root root       163 2022-12-17 20:41 ./slackware64/xfce/thunar-volman-4.18.0-x86_64-1.txz.asc
@@ -5594,11 +5594,11 @@ drwxr-xr-x   2 root root      4096 2021-02-15 19:33 ./slackware64/y
 -rw-r--r--   1 root root   1486956 2021-02-13 13:56 ./slackware64/y/nethack-3.6.6-x86_64-3.txz
 -rw-r--r--   1 root root       163 2021-02-13 13:56 ./slackware64/y/nethack-3.6.6-x86_64-3.txz.asc
 -rw-r--r--   1 root root        26 2020-12-30 21:55 ./slackware64/y/tagfile
-drwxr-xr-x  18 root root      4096 2023-01-09 20:14 ./source
--rw-r--r--   1 root root    595026 2023-01-09 20:14 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root       163 2023-01-09 20:14 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root    827774 2023-01-09 20:13 ./source/FILE_LIST
--rw-r--r--   1 root root  24056934 2023-01-09 20:13 ./source/MANIFEST.bz2
+drwxr-xr-x  18 root root      4096 2023-01-10 21:39 ./source
+-rw-r--r--   1 root root    595026 2023-01-10 21:39 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root       163 2023-01-10 21:39 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root    827774 2023-01-10 21:39 ./source/FILE_LIST
+-rw-r--r--   1 root root  24054768 2023-01-10 21:39 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root       828 2022-02-02 04:43 ./source/README.TXT
 drwxr-xr-x 123 root root      4096 2022-10-07 02:22 ./source/a
 -rw-r--r--   1 root root       234 2022-10-16 18:39 ./source/a/FTBFSlog
@@ -12048,11 +12048,11 @@ drwxr-xr-x  2 root root      4096 2022-09-06 18:27 ./source/n/c-ares
 -rw-r--r--  1 root root    835619 2021-10-27 06:07 ./source/n/c-ares/c-ares-1.18.1.tar.lz
 -rwxr-xr-x  1 root root      4417 2022-09-06 18:27 ./source/n/c-ares/c-ares.SlackBuild
 -rw-r--r--  1 root root       970 2021-04-09 19:13 ./source/n/c-ares/slack-desc
-drwxr-xr-x  2 root root      4096 2022-12-05 20:52 ./source/n/ca-certificates
--rwxr-xr-x  1 root root      3661 2021-10-05 19:57 ./source/n/ca-certificates/ca-certificates.SlackBuild
+drwxr-xr-x  2 root root      4096 2023-01-10 21:19 ./source/n/ca-certificates
+-rwxr-xr-x  1 root root      3661 2023-01-10 21:19 ./source/n/ca-certificates/ca-certificates.SlackBuild
 -rw-r--r--  1 root root     14672 2018-12-11 03:14 ./source/n/ca-certificates/ca-certificates.tar.lz
 -rw-r--r--  1 root root    214596 2022-12-05 20:52 ./source/n/ca-certificates/certdata-20221205.txt.xz
--rw-r--r--  1 root root       448 2021-10-05 19:56 ./source/n/ca-certificates/doinst.sh.gz
+-rw-r--r--  1 root root       596 2023-01-10 21:19 ./source/n/ca-certificates/doinst.sh.gz
 -rw-r--r--  1 root root       374 2015-09-14 21:52 ./source/n/ca-certificates/fixup_update-ca-certificates.diff.gz
 -rwxr-xr-x  1 root root      1626 2018-12-11 03:25 ./source/n/ca-certificates/get-certdata.txt.sh
 -rw-r--r--  1 root root       128 2012-09-11 21:12 ./source/n/ca-certificates/setup.11.cacerts
@@ -13410,8 +13410,8 @@ drwxr-xr-x  2 root root      4096 2022-04-17 19:07 ./source/x/libpinyin
 -rwxr-xr-x  1 root root      3720 2021-09-17 03:16 ./source/x/libpinyin/libpinyin.SlackBuild
 -rw-r--r--  1 root root       820 2020-11-22 20:13 ./source/x/libpinyin/slack-desc
 drwxr-xr-x  2 root root      4096 2022-12-31 21:25 ./source/x/libva
-drwxr-xr-x  2 root root      4096 2022-12-31 21:26 ./source/x/libva-utils
--rw-r--r--  1 root root    854350 2022-12-26 14:58 ./source/x/libva-utils/libva-utils-2.17.0.tar.lz
+drwxr-xr-x  2 root root      4096 2023-01-10 21:10 ./source/x/libva-utils
+-rw-r--r--  1 root root    854180 2023-01-06 08:21 ./source/x/libva-utils/libva-utils-2.17.1.tar.lz
 -rwxr-xr-x  1 root root      3601 2021-03-24 03:48 ./source/x/libva-utils/libva-utils.SlackBuild
 -rw-r--r--  1 root root        42 2022-10-09 20:36 ./source/x/libva-utils/libva-utils.url
 -rw-r--r--  1 root root       785 2018-02-27 06:13 ./source/x/libva-utils/slack-desc
@@ -15135,8 +15135,8 @@ drwxr-xr-x  2 root root      4096 2023-01-05 20:00 ./source/xfce/libxfce4ui
 -rw-r--r--  1 root root        51 2022-12-17 20:29 ./source/xfce/libxfce4ui/libxfce4ui.url
 -rw-r--r--  1 root root       767 2018-02-27 06:13 ./source/xfce/libxfce4ui/slack-desc
 -rw-r--r--  1 root root      1449 2015-03-01 21:31 ./source/xfce/libxfce4ui/vendorinfo
-drwxr-xr-x  2 root root      4096 2022-12-17 20:30 ./source/xfce/libxfce4util
--rw-r--r--  1 root root    427621 2022-12-15 08:55 ./source/xfce/libxfce4util/libxfce4util-4.18.0.tar.lz
+drwxr-xr-x  2 root root      4096 2023-01-10 21:06 ./source/xfce/libxfce4util
+-rw-r--r--  1 root root    426643 2023-01-10 18:22 ./source/xfce/libxfce4util/libxfce4util-4.18.1.tar.lz
 -rwxr-xr-x  1 root root      4860 2022-12-17 20:30 ./source/xfce/libxfce4util/libxfce4util.SlackBuild
 -rw-r--r--  1 root root        53 2022-12-17 20:29 ./source/xfce/libxfce4util/libxfce4util.url
 -rw-r--r--  1 root root       776 2018-02-27 06:13 ./source/xfce/libxfce4util/slack-desc
@@ -15146,14 +15146,14 @@ drwxr-sr-x  2 root root      4096 2022-09-06 18:27 ./source/xfce/mousepad
 -rwxr-xr-x  1 root root      4088 2022-09-06 18:27 ./source/xfce/mousepad/mousepad.SlackBuild
 -rw-r--r--  1 root root        48 2022-04-02 18:36 ./source/xfce/mousepad/mousepad.url
 -rw-r--r--  1 root root       921 2020-06-21 07:57 ./source/xfce/mousepad/slack-desc
-drwxr-xr-x  2 root root      4096 2022-12-22 18:50 ./source/xfce/thunar
+drwxr-xr-x  2 root root      4096 2023-01-10 21:07 ./source/xfce/thunar
 drwxr-xr-x  2 root root      4096 2022-12-17 20:41 ./source/xfce/thunar-volman
 -rw-r--r--  1 root root       797 2020-11-25 21:09 ./source/xfce/thunar-volman/slack-desc
 -rw-r--r--  1 root root    410307 2022-12-15 09:49 ./source/xfce/thunar-volman/thunar-volman-4.18.0.tar.lz
 -rwxr-xr-x  1 root root      3468 2022-12-17 20:41 ./source/xfce/thunar-volman/thunar-volman.SlackBuild
 -rw-r--r--  1 root root        54 2022-12-17 20:41 ./source/xfce/thunar-volman/thunar-volman.url
 -rw-r--r--  1 root root       914 2020-01-31 19:09 ./source/xfce/thunar/slack-desc
--rw-r--r--  1 root root   2209654 2022-12-22 14:18 ./source/xfce/thunar/thunar-4.18.1.tar.lz
+-rw-r--r--  1 root root   2223684 2023-01-10 12:17 ./source/xfce/thunar/thunar-4.18.2.tar.lz
 -rwxr-xr-x  1 root root      4779 2021-03-07 18:59 ./source/xfce/thunar/thunar.SlackBuild
 -rw-r--r--  1 root root        47 2022-12-17 20:39 ./source/xfce/thunar/thunar.url
 drwxr-xr-x  2 root root      4096 2022-12-17 20:42 ./source/xfce/tumbler
