@@ -1,3 +1,13 @@
+Tue Jan 10 21:32:00 UTC 2023
+a/kernel-firmware-20230110_a1ad1d5-noarch-1.txz:  Upgraded.
+n/ca-certificates-20221205-noarch-2.txz:  Rebuilt.
+  Make sure that if we're installing this package on another partition (such as
+  when using installpkg with a --root parameter) that the updates are done on
+  that partition. Thanks to fulalas.
+x/libva-utils-2.17.1-x86_64-1.txz:  Upgraded.
+xfce/libxfce4util-4.18.1-x86_64-1.txz:  Upgraded.
+xfce/thunar-4.18.2-x86_64-1.txz:  Upgraded.
++--------------------------+
 Mon Jan  9 20:10:55 UTC 2023
 a/aaa_libraries-15.1-x86_64-16.txz:  Rebuilt.
   Upgraded:  libncurses.so.6.4, libncursesw.so.6.4, libtinfo.so.6.4,
